--- a/Pi-from-Colliding-Blocks.ipynb
+++ b/Pi-from-Colliding-Blocks.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Digits of $\\pi$ from colliding blocks\n",
+    "# Digits of π from colliding blocks\n",
     "\n",
     "## 1. Introduction\n",
     "\n",
@@ -12,7 +12,7 @@
     "\n",
     "**Claim:** if the ratio between the block masses is a power of 100 then the total number of clacks* $N_\\text{clacks}$ (collisions plus reflections) is equal to certain number of digits of $\\pi$. More precisely, if the masses satisfy the relation $M/m = 100^{d-1}$, then the number of clacks is equal to the first $d$ digits of $\\pi$.\n",
     "\n",
-    "\\*: **clack** *the short loud sound made when two hard objects hit each other*"
+    "\\*: **clack** *the short loud sound made when two hard objects hit each other* [2]"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Completely mindblown, I decided to verify this probably useless but fascinating result, and maybe try to derive an analytical understanding of the how and why this *unexpected* result. The video gives credit to [Gregory Galperin](http://www.ux1.eiu.edu/~cfgg/), who discovered this result in the 1990s and published it in 2003 under the title ***Playing pool with $\\pi$ (the number $\\pi$ from a billiard point of view)*** [2]. Nonetheless, I have resisted the temptation to see Galperin's work and try my own version.\n",
+    "Completely mindblown, I decided to verify this probably useless but fascinating result, and maybe try to derive an analytical understanding of the how and why this *unexpected* result. The video gives credit to [Gregory Galperin](http://www.ux1.eiu.edu/~cfgg/), who discovered this result in the 1990s and published it in 2003 under the title ***Playing pool with $\\pi$ (the number $\\pi$ from a billiard point of view)*** [3]. Nonetheless, I have resisted the temptation to see Galperin's work and try my own version.\n",
     "\n",
     "In order to simplify the way to address the problem I have broken it down into three parts:\n",
     " 1. Use simple mechanics to study the general motion of the two blocks\n",
@@ -903,7 +903,7 @@
     "By carefully deriving and impossing the conditions for the end of the process, the simulations verified the claim of the correspondence of the total number of clacks with the digits of $\\pi$ when the mass-ratio of the two blocks satisfy $\\lambda=M/m=100^{d-1}$.\n",
     "The conditions and the recurvise relations were then used to analytically derive a general formula relating the number of clacks and the digits of $\\pi$.\n",
     "The derived formula was shown to work correctly for several cases and later proven its validity for other larger values.\n",
-    "Interestingly, the derivation presented here deviates substantially from the original work by Galperin [2], who instead of recursively solving the equations of motion used an clever optical analog."
+    "Interestingly, the derivation presented here deviates substantially from the original work by Galperin [3], who instead of recursively solving the equations of motion used an clever optical analog (after I found eq. (58) I finally had a look at his paper!)."
    ]
   },
   {
@@ -914,7 +914,9 @@
     "\n",
     "[1] Sanderson, G., [3Blue1Brown]. (2019, January). *The most unexpected answer to a counting puzzle*. Retrieved from [youtube.com/watch?v=HEfHFsfGXjs](https://www.youtube.com/watch?v=HEfHFsfGXjs).\n",
     "\n",
-    "[2] Galperin, G., *Playing pool with π (the number π from a billiard point of view)*, Regular and Chaotic Dynamics, pp. 375-394, 2003 [[PDF](https://www.maths.tcd.ie/~lebed/Galperin.%20Playing%20pool%20with%20pi.pdf)]."
+    "[2] Macmillan Dictionary (2019). *clack - definition and synonyms*. Retrieved from [www.macmillandictionary.com/dictionary/british/clack_2#clack_2__1](https://www.macmillandictionary.com/dictionary/british/clack_2#clack_2__1).\n",
+    "\n",
+    "[3] Galperin, G., *Playing pool with π (the number π from a billiard point of view)*, Regular and Chaotic Dynamics, pp. 375-394, 2003 [[PDF](https://www.maths.tcd.ie/~lebed/Galperin.%20Playing%20pool%20with%20pi.pdf)]."
    ]
   },
   {
