--- a/Pi-from-Colliding-Blocks.ipynb
+++ b/Pi-from-Colliding-Blocks.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "**Claim:** if the ratio between the block masses is a power of 100 then the total number of clacks* $N_\\text{clacks}$ (collisions plus reflections) is equal to certain number of digits of $\\pi$. More precisely, if the masses satisfy the relation $M/m = 100^{d-1}$, then the number of clacks is equal to the first $d$ digits of $\\pi$.\n",
     "\n",
-    "\\*: **clack** *the short loud sound made when two hard objects hit each other* [2]"
+    "\\*: **clack** *the short loud sound made when two hard objects hit each other* [2]."
    ]
   },
   {
