--- a/Pi-from-Colliding-Blocks.ipynb
+++ b/Pi-from-Colliding-Blocks.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "## 2. Dynamics of the collision-reflection process\n",
     "\n",
-    "### 2.1 blabla\n",
+    "### 2.1 Definitions and conditions\n",
     "\n",
     "**Definitions:** \n",
     "- the clack produced by one block hitting the other will be called ***collision***\n",
@@ -427,36 +427,6 @@
     "t0 = time()\n",
     "for digits in range(1, 8):  # more digits can take long\n",
     "    lambda0 = 100**(digits-1)\n",
-    "    n_clacks = num_clacks(lambda_=lambda0)\n",
-    "    print(f'num_clacks(d={digits}):  {n_clacks}')\n",
-    "print(f'\\n\\t      π: {np.pi:.{digits}f}')\n",
-    "print('-'*26 + '\\ntime: {:.1f} sec'.format(time()-t0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "num_clacks(d=1):  3\n",
-      "num_clacks(d=2):  25\n",
-      "num_clacks(d=3):  201\n",
-      "num_clacks(d=4):  1608\n",
-      "\n",
-      "\t      π: 3.1416\n",
-      "--------------------------\n",
-      "time: 0.0 sec\n"
-     ]
-    }
-   ],
-   "source": [
-    "t0 = time()\n",
-    "for digits in range(1, 5):  # more digits can take long\n",
-    "    lambda0 = (8*8)**(digits-1)\n",
     "    n_clacks = num_clacks(lambda_=lambda0)\n",
     "    print(f'num_clacks(d={digits}):  {n_clacks}')\n",
     "print(f'\\n\\t      π: {np.pi:.{digits}f}')\n",
