--- a/Pi-from-Colliding-Blocks.ipynb
+++ b/Pi-from-Colliding-Blocks.ipynb
@@ -69,9 +69,9 @@
     "\n",
     "We are interested on the total number of clacks given by \n",
     "\n",
-    "$\\begin{align*} \n",
+    "\\begin{equation} \n",
     "N_\\text{clacks} = N_\\text{collisions} + N_\\text{reflections} \\tag*{(1)}\n",
-    "\\end{align*}$\n",
+    "\\end{equation}\n",
     "\n",
     "**Boundary conditions:** \n",
     "- start: the initial state of the system is the large block (of mass $M$) moving with some constant speed $V_0$ before colliding with the small block (of mass $m$) initially at rest. \n",
@@ -81,10 +81,10 @@
     "\n",
     "**Reflections:** before hitting the wall, the small block moves with positive velocity, which is fully reversed after the collision. This can be proven in general by writting the conservation of total energy and momentum:\n",
     "\n",
-    "\\begin{align*}\n",
-    "\\frac12 mv^2_\\text{before} &= \\frac12 mv^2_\\text{after} \\tag*{(2)}\\\\\n",
-    "mv_\\text{before} &= mv_\\text{after} \\tag*{(3)}\\\\\n",
-    "\\end{align*}\n",
+    "\\begin{eqnarray}\n",
+    "\\frac12 mv^2_\\text{before} &=& \\frac12 mv^2_\\text{after} \\tag*{(2)}\\\\\n",
+    "mv_\\text{before} &=& mv_\\text{after} \\tag*{(3)}\\\\\n",
+    "\\end{eqnarray}\n",
     "\n",
     "This system of equations has two solutions: $v_\\text{after} = v_\\text{before}$ and $v_\\text{after} = -v_\\text{before}$. The first solution indicates that the block moves across the wall, so although mathematically valid this is a unphysical solution. The second solution shows that the block bounces against the wall and after the reflection will move with the same speed in the opposite direction. This shows that the role played by the wall in the dynamics of the problem is by reversing the sign of the small block's velocity before the next collision."
    ]
