--- a/Pi-from-Colliding-Blocks.ipynb
+++ b/Pi-from-Colliding-Blocks.ipynb
@@ -86,6 +86,10 @@
     "mv_\\text{before} &=& mv_\\text{after} \\tag*{(3)}\\\\\n",
     "\\end{eqnarray}\n",
     "\n",
+    "\\begin{eqnarray}\n",
+    "v^2_k + \\lambda V^2_k &=& \\big(\\lambda V_k - v_k - \\lambda V_{k+1}\\big)^2 + \\lambda V^2_{k+1} \n",
+    "\\end{eqnarray}\n",
+    "\n",
     "This system of equations has two solutions: $v_\\text{after} = v_\\text{before}$ and $v_\\text{after} = -v_\\text{before}$. The first solution indicates that the block moves across the wall, so although mathematically valid this is a unphysical solution. The second solution shows that the block bounces against the wall and after the reflection will move with the same speed in the opposite direction. This shows that the role played by the wall in the dynamics of the problem is by reversing the sign of the small block's velocity before the next collision."
    ]
   },
