--- a/Pi-from-Colliding-Blocks.ipynb
+++ b/Pi-from-Colliding-Blocks.ipynb
@@ -47,12 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Completely mindblown, I decided to verify this probably useless but fascinating result, and maybe try to derive an analytical understanding of the how and why this *unexpected* result. The video gives credit to [Gregory Galperin](http://www.ux1.eiu.edu/~cfgg/), who discovered this result in the 1990s and published it in 2003 under the title ***Playing pool with $\\pi$ (the number $\\pi$ from a billiard point of view)*** [3]. Nonetheless, I have resisted the temptation to see Galperin's work and try my own version.\n",
-    "\n",
-    "In order to simplify the way to address the problem I have broken it down into three parts:\n",
-    " 1. Use simple mechanics to study the general motion of the two blocks\n",
-    " 2. Use the results from part 1 to confirm that the number of clacks is equal to the first $d$ digits of $\\pi$ when the masses satisfy the relation $M/m = 100^{d-1}$\n",
-    " 3. Try to understand the connection between the problem and $\\pi$"
+    "Completely mindblown, I decided to verify this probably useless but fascinating result, and maybe try to derive an analytical understanding about the how and why this *unexpected* result. The video gives credit to [Gregory Galperin](http://www.ux1.eiu.edu/~cfgg/), who discovered this result in the 1990s and published it in 2003 under the title ***Playing pool with $\\pi$ (the number $\\pi$ from a billiard point of view)*** [3]. Nonetheless, I have resisted the temptation to see Galperin's work before trying my own version, which is presented in the following sections."
    ]
   },
   {
@@ -76,17 +71,18 @@
     "\n",
     "**Boundary conditions:** \n",
     "- start: the initial state of the system is the large block (of mass $M$) moving with some constant speed $V_0$ before colliding with the small block (of mass $m$) initially at rest. \n",
-    "- end: the final state of the system is both block moving independently away from the wall, with the large block moving faster than the small block, which guarantees no further collisions.\n",
+    "- end: in the final state of the system the two blocks move independently away from the wall, with the large block moving faster than the small block, which guarantees no further collisions.\n",
     "\n",
-    "The direction of motion in the initial state is defined to be positive. The final state is key for solving the problem as it determines the total number of clacks. In particular, the final state sets the boundary between the mathematical solution and the physical solution of interest. \n",
+    "The direction of motion in the initial state is defined to be positive. The final state is key for solving the problem as it determines the total number of clacks. In particular, the final state sets the boundary between the mathematical solution and the physical solution of interest, as shown in Sec. 4.2. \n",
     "\n",
     "**Reflections:** before hitting the wall, the small block moves with positive velocity, which is fully reversed after the collision. This can be proven in general by writting the conservation of total energy and momentum:\n",
     "\n",
     "\\begin{eqnarray}\n",
-    "\\frac12 mv^2_\\text{before} &=& \\frac12 mv^2_\\text{after} \\tag*{(2)}\\\\\n",
-    "mv_\\text{before} &=& mv_\\text{after} \\tag*{(3)}\\\\\n",
+    "\\frac12 mv^2_\\text{before} &=& \\frac12 mv^2_\\text{after}, \\tag*{(2)}\\\\\n",
+    "mv_\\text{before} &=& mv_\\text{after}; \\tag*{(3)}\\\\\n",
     "\\end{eqnarray}\n",
     "\n",
+    "where contributions from the large block are ignored as its does participate in the reflection process.\n",
     "This system of equations has two solutions: $v_\\text{after} = v_\\text{before}$ and $v_\\text{after} = -v_\\text{before}$. The first solution indicates that the block moves across the wall, so although mathematically valid this is a unphysical solution. The second solution shows that the block bounces against the wall and after the reflection will move with the same speed in the opposite direction. This shows that the role played by the wall in the dynamics of the problem is by reversing the sign of the small block's velocity before the next collision."
    ]
   },
@@ -97,12 +93,12 @@
     "**Collisions:** the most interesting part of the process occurs when the blocks collide with one another, as one will transfer momentum to the other with each collision. For describing the process in general, we will consider the $k$-th collision between the blocks having velocities $V_k$ and $-v_k$ to determine their velocities $V_{k+1}$ and $v_{k+1}$ after the collision. Conservation of energy and momentum lead to:\n",
     "\n",
     "\\begin{align*}\n",
-    "\\frac12 MV^2_k + \\frac12 mv^2_k  &=& \\frac12 MV^2_{k+1} + \\frac12 mv^2_{k+1} \\tag*{(4)}\\\\\n",
-    "MV_k - mv_k &=& MV_{k+1} + mv_{k+1} \\tag*{(5)}\\\\\n",
+    "\\frac12 MV^2_k + \\frac12 mv^2_k  &= \\frac12 MV^2_{k+1} + \\frac12 mv^2_{k+1}, \\tag*{(4)}\\\\\n",
+    "MV_k - mv_k &= MV_{k+1} + mv_{k+1}. \\tag*{(5)}\\\\\n",
     "\\end{align*}\n",
     "\n",
     "The negative sign in front of $v_k$ indicates the direction of motion of this block is reversed between collisions, this is the action of the wall as proven above.\n",
-    "This sign guarantees that all the information of the problem is contained in the system of equations. \n",
+    "This sign guarantees that all the information of the problem, including the reflection in the wall, is contained in the system of equations. \n",
     "The only exception is for the first collision (as there is no reflection before the first collision); however, $v_0=0$ so the sign will not affect the result and the equations are still valid.\n",
     "Defining the ratio between the block masses\n",
     "\n",
@@ -113,22 +109,22 @@
     "and simplifying redundant terms, the system of equations can be written as\n",
     "\n",
     "\\begin{align*}\n",
-    "\\text{conservation of energy  :} \\qquad & \\lambda V^2_k + v^2_k = \\lambda V^2_{k+1} + v^2_{k+1}\n",
+    "\\text{conservation of energy  :} \\qquad & \\lambda V^2_k + v^2_k = \\lambda V^2_{k+1} + v^2_{k+1},\n",
     "\\tag*{(7)} \\\\\n",
-    "\\text{conservation of momentum:} \\qquad & \\, \\lambda V_k - v_k = \\lambda V_{k+1} + v_{k+1}\n",
+    "\\text{conservation of momentum:} \\qquad & \\, \\lambda V_k - v_k = \\lambda V_{k+1} + v_{k+1}.\n",
     "\\tag*{(8)}\n",
     "\\end{align*}\n",
     "\n",
     "Solving the second equation for $v_{k+1}$ and replacing in the first equation we get\n",
     "\n",
     "\\begin{eqnarray}\n",
-    "v^2_k + \\lambda V^2_k &=& \\big(\\lambda V_k - v_k - \\lambda V_{k+1}\\big)^2 + \\lambda V^2_{k+1} \n",
+    "v^2_k + \\lambda V^2_k &=& \\big(\\lambda V_k - v_k - \\lambda V_{k+1}\\big)^2 + \\lambda V^2_{k+1} ,\n",
     "\\end{eqnarray}\n",
     "\n",
     "which can be rearranged as a quadratic equation for $V_{k+1}$\n",
     "\n",
     "\\begin{align}\n",
-    "0 &= (\\lambda+1) V_{k+1}^2 - 2 \\big(\\lambda V_k - v_k \\big)V_{k+1} + (\\lambda-1) V_{k}^2 - 2 V_{k}v_{k}\n",
+    "0 &= (\\lambda+1) V_{k+1}^2 - 2 \\big(\\lambda V_k - v_k \\big)V_{k+1} + (\\lambda-1) V_{k}^2 - 2 V_{k}v_{k},\n",
     "\\tag*{(9)}\n",
     "\\end{align}\n",
     "\n",
@@ -136,22 +132,22 @@
     "This can be easily solved after some algebraic manipulations\n",
     "\n",
     "\\begin{align}\n",
-    "V_{k+1} &= \\frac{1}{\\lambda+1}\\big( (\\lambda V_k - v_k) \\pm (V_k + v_k) \\big) \\tag*{(10)}\n",
+    "V_{k+1} &= \\frac{1}{\\lambda+1}\\big( (\\lambda V_k - v_k) \\pm (V_k + v_k) \\big) \\tag*{(10)}.\n",
     "\\end{align}\n",
     "\n",
     "In order to choose one of the two solutions we can consider what happens for the first collision ($k=0$), in which the small block is at rest:\n",
     "\n",
     "\\begin{align}\n",
     "V_{1} &= \\frac{1}{\\lambda+1}\\big( (\\lambda V_0 - v_0) \\pm (V_k + v_0) \\big)\n",
-    "= \\left\\{\\begin{array}{cc} V_0 & \\text{(+)}\\\\ 0 & (-) \\end{array}\\right. \\tag*{(11)}\n",
+    "= \\left\\{\\begin{array}{cc} V_0 & \\text{(+)}\\\\ 0 & (-) \\end{array}\\right. \\tag*{(11)}.\n",
     "\\end{align}\n",
     "\n",
     "The solution using the positive root ($+$) shows that after the first collision the large block continues unaltered, going through the small block. For this reason we conclude that this solution is unphysical and that the negative root ($-$) is the physical solution to be used.\n",
     "Then, the solution can be replaced into eq. (8) to find the velocity of the blocks after the $k$-th collistion\n",
     "\n",
     "\\begin{align}\n",
-    "V_{k+1} &= \\left(\\frac{\\lambda-1}{\\lambda+1}\\right) V_k - \\left(\\frac{2}{\\lambda+1}\\right) v_k \\tag*{(12)} \\\\\n",
-    "v_{k+1} &= \\left(\\frac{2\\lambda}{\\lambda+1}\\right) V_k + \\left(\\frac{\\lambda-1}{\\lambda+1}\\right) v_k \\tag*{(13)}\n",
+    "V_{k+1} &= \\left(\\frac{\\lambda-1}{\\lambda+1}\\right) V_k - \\left(\\frac{2}{\\lambda+1}\\right) v_k \\tag*{(12)}, \\\\\n",
+    "v_{k+1} &= \\left(\\frac{2\\lambda}{\\lambda+1}\\right) V_k + \\left(\\frac{\\lambda-1}{\\lambda+1}\\right) v_k. \\tag*{(13)}\n",
     "\\end{align}\n",
     "\n",
     "This system recursively describes how the velocity of each block changes after each collision as a function of the mass ratio $\\lambda$ and the initial velocity $V_0$."
@@ -166,11 +162,11 @@
     "A simple check of the equations obtained above can be performed for the case when the two blocks have the same mass: $M=m$. In this case equations (12) and (13) reduce to\n",
     "\n",
     "\\begin{align}\n",
-    "V_{k+1} &= -v_k \\tag*{(14)} \\\\\n",
-    "v_{k+1} &= \\;\\;V_k \\tag*{(15)}\n",
+    "V_{k+1} &= -v_k ,\\tag*{(14)} \\\\\n",
+    "v_{k+1} &= \\;\\;V_k .\\tag*{(15)}\n",
     "\\end{align}\n",
     "\n",
-    "which indicates that after a collision the momentum of a block is fully transferred to the other. \n",
+    "This result indicates that after a collision the momentum of a block is fully transferred to the other. \n",
     "We can now follow the evolution of the system by evaluating for succesive values of $k$.\n",
     "\n",
     "- $k=1$: before the first collision the large block moves with positive velocity $V_0$ towards the second block at rest $v_0=0$; after the collision the large block has transferred all its momentum and remains at rest $V_1=0$, whereas the small block moves with velocity $v_1=V_0$ towards the wall\n",
@@ -185,13 +181,15 @@
     "We introduce here the notation $k_\\text{last}$ to denote the value of $k$ after which the process ends.\n",
     "In the previous example $k_\\text{last}=2$; in which case we could count $N_\\text{collisions} = 2$ collisions and $N_\\text{reflections} = 1$ reflections for a total of $N_\\text{clacks} = N_\\text{collisions} + N_\\text{reflections} = 3$ clacks.\n",
     "In this example we notice that $N_\\text{collisions} = k_\\text{last}$ (by definition) and $N_\\text{reflections} = k_\\text{last} -  1$, from where we can write the total number of clacks to be $N_\\text{clacks}=2k_\\text{last} -  1$; however, this relationship is only valid if $v_{k_\\text{last}}\\ge0$. \n",
-    "When $v_{k_\\text{last}}<0$ the small block moves towards the wall and no matter how small its speed it will eventually hit the wall one more time. In this case we will find $N_\\text{collisions} = k_\\text{last}=N_\\text{reflections} = k_\\text{last}$.\n",
+    "When $v_{k_\\text{last}}<0$ the small block moves towards the wall so it will eventually hit it one more time. \n",
+    "In this case we will find $N_\\text{collisions} = N_\\text{reflections} = k_\\text{last}$.\n",
     "This occurs for example for $\\lambda=10^4$ and nicely shown in the *3Blue1Brown* video at [t=1m45s](https://www.youtube.com/watch?v=HEfHFsfGXjs&feature=youtu.be&t=105).\n",
     "\n",
     "We can now explicitly write the two possible conditions that will make the process end:\n",
-    "- condition *i*: if after a collision we find $V_{k+1} < v_{k+1} \\le 0$, then the process ends with $k_\\text{last}=k+1$. In this case neither of the blocks is moving towards the wall and the large block moves away faster so the small block can never reach it. The total number of clacks is given by $N_\\text{clacks} = 2k_\\text{last} - 1$.\n",
     "\n",
-    "- condition *ii*: if after a collision we find $0 < v_{k+1} \\le -V_{k+1}$, then the process ends with $k_\\text{last}=k+1$. In this case the large block moves away from the wall faster than the small block moves towards the wall. One more reflection will occur; however, since $|V_{k+1}| > |v_{k+1}|$ the small block can never reach the large one. The total number of clacks is given by $N_\\text{clacks} = 2k_\\text{last}$.\n",
+    "- condition *i*: if after a collision we find $V_{k+1} < v_{k+1} \\le 0$, then neither of the blocks is moving towards the wall and the large block moves away faster so the small block can never reach it. The total number of clacks is given by $N_\\text{clacks} = 2k_\\text{last} - 1$.\n",
+    "\n",
+    "- condition *ii*: if after a collision we find $0 < v_{k+1} \\le -V_{k+1}$, then the large block moves away from the wall faster than the small block moves towards the wall. One more reflection will occur; however, since $|V_{k+1}| > |v_{k+1}|$ the small block can never reach the large one. The total number of clacks is given by $N_\\text{clacks} = 2k_\\text{last}$.\n",
     "\n",
     "In summary:\n",
     "\n",
@@ -202,6 +200,7 @@
     "\\end{array}\\right. \\tag*{(16)}\n",
     "\\end{align}\n",
     "\n",
+    "In both cases the process ends with $k_\\text{last}=k+1$. \n",
     "These conditions will turn out to be critical in the simulation presented in Sec. 2 as well as the (for now) misterious relation between the total number of clacks $N_\\text{clacks}$ and certain number of digits of $\\pi$, which is discussed in Sec. 3."
    ]
   },
@@ -459,30 +458,30 @@
     "The plots of the velocity of each block clearly show that they can be represented by trigonometric functions of the number of collisions $k$; this feature arises from the conservation of energy (7). Since this equation is valid for all collisions we can write\n",
     "\n",
     "\\begin{align*}\n",
-    "\\lambda V^2_k + v^2_k = \\lambda V^2_{0} + v^2_{0} = \\lambda V^2_{0} \\tag*{(17)}\n",
+    "\\lambda V^2_k + v^2_k = \\lambda V^2_{0} + v^2_{0} = \\lambda V^2_{0} ,\\tag*{(17)}\n",
     "\\end{align*}\n",
     "\n",
     "where the right-hand side is a constant given in terms of the initial conditions. \n",
-    "This is the equation of an ellipse and it can be easily transformed to the equation of a circle by scalling $V_k\\to\\tilde{V}_k=\\sqrt{\\lambda}V_k$, which allows to write conservation of energy in the form\n",
+    "This is the equation of an ellipse and it can be easily transformed to the equation of a circle by scalling $V_k\\to\\tilde{V}_k=\\sqrt{\\lambda}V_k$, which allows writing conservation of energy in the form\n",
     "\n",
     "\\begin{align*}\n",
-    "\\tilde{V}^2_k + v^2_k = \\tilde{V}^2_{0} \\tag*{(18)}\n",
+    "\\tilde{V}^2_k + v^2_k = \\tilde{V}^2_{0} ,\\tag*{(18)}\n",
     "\\end{align*}\n",
     "\n",
     "corresponding to a circle of radius $\\tilde{V}_0$ in the $(\\tilde{V}_k,v_k)$ space. The two variables $(\\tilde{V}_k, v_k)$ can be parametrized in terms of trigonometric functions\n",
     "\n",
     "\\begin{align*}\n",
-    "\\tilde{V}_k &= \\tilde{V}_0\\cos\\theta_k &\\to V_k &= V_0\\cos\\theta_k \\tag*{(19)}\\\\\n",
-    "v_k &= \\tilde{V}_0\\sin\\theta_k&\\to v_k &= \\sqrt{\\lambda}V_0\\sin\\theta_k \\tag*{(20)}\\\\\n",
+    "\\tilde{V}_k &= \\tilde{V}_0\\cos\\theta_k &\\to V_k &= V_0\\cos\\theta_k ,\\tag*{(19)}\\\\\n",
+    "v_k &= \\tilde{V}_0\\sin\\theta_k&\\to v_k &= \\sqrt{\\lambda}V_0\\sin\\theta_k ,\\tag*{(20)}\\\\\n",
     "\\end{align*}\n",
     "\n",
     "where we have transformed back to the original variables. The angle $\\theta_k$ is some compact parameter and from the plots in the previous section we can write\n",
     "\n",
     "\\begin{align*}\n",
-    "\\theta_k = \\frac{\\pi k}{k_{\\{v_k=0\\}}} \\tag*{(21)}\n",
+    "\\theta_k = \\frac{\\pi k}{k_{\\{v_k=0\\}}} ,\\tag*{(21)}\n",
     "\\end{align*}\n",
     "\n",
-    "where $k=k_{\\{v_k=0\\}}$ is defined as the point where the small block comes to rest; equivalently, this also corresponds to the point where the large block moves away from the wall with the same speed as it approached the wall initially\n",
+    "where $k=k_{\\{v_k=0\\}}$ is defined as the point where the small block would come to rest; equivalently, this also corresponds to the point where the large block would move away from the wall with the same speed as it approached the wall initially\n",
     "\n",
     "\\begin{align*}\n",
     "v_{k_{\\{v_k=0\\}}} &= \\;\\;0, \\tag*{(22)} \\\\\n",
@@ -492,7 +491,7 @@
     "\n",
     "Notice that $k_{\\{v_k=0\\}}$ is not necessariy equal to $k_\\text{last}$. \n",
     "In fact, $k_{v_k=0}$ is almost never an integer.\n",
-    "The example in Sec. 1.2 shows that for $\\lambda=1$ the process ends with the small block at rest,\n",
+    "The example in Sec. 2.2 shows that for $\\lambda=1$ the process ends with the small block at rest,\n",
     "in this particular case we find $k_{v_k=0}=k_\\text{last}$."
    ]
   },
@@ -500,15 +499,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us now use the recursive formula for velocities between collisions (12)\n",
+    "Let us now use the parametrization (21) in the recursive formula for velocities between collisions (12):\n",
     "\n",
     "\\begin{align}\n",
     "V_{k+1} &= \\left(\\frac{\\lambda-1}{\\lambda+1}\\right) V_k - \\left(\\frac{2}{\\lambda+1}\\right) v_k \\\\\n",
     "V_0\\cos\\theta_{k+1} &= \\left(\\frac{\\lambda-1}{\\lambda+1}\\right) V_0\\cos\\theta_k - \\left(\\frac{2}{\\lambda+1}\\right) \\sqrt{\\lambda}V_0\\sin\\theta_k \\\\\n",
-    "\\cos\\left(\\theta_{k}+\\frac{\\pi}{k_{\\{v_k=0\\}}}\\right) &= \\left(\\frac{\\lambda-1}{\\lambda+1}\\right) \\cos\\theta_k - \\left(\\frac{2\\sqrt{\\lambda}}{\\lambda+1}\\right) \\sin\\theta_k \\\\\n",
+    "\\cos\\left(\\theta_{k}+\\frac{\\pi}{k_{\\{v_k=0\\}}}\\right) &= \\left(\\frac{\\lambda-1}{\\lambda+1}\\right) \\cos\\theta_k - \\left(\\frac{2\\sqrt{\\lambda}}{\\lambda+1}\\right) \\sin\\theta_k .\\\\\n",
     "\\end{align}\n",
     "\n",
-    "where we have used the parametrization (21). Now we can expand the left-hand side using the cosine of the sum of two angles\n",
+    "Now we can expand the left-hand side using the cosine of the sum of two angles\n",
     "\n",
     "\\begin{align}\n",
     "\\cos\\theta_{k}\\,\\cos\\left(\\frac{\\pi}{k_{\\{v_k=0\\}}}\\right) - \\sin\\theta_{k}\\,\\sin\\left(\\frac{\\pi}{k_{\\{v_k=0\\}}}\\right) \n",
@@ -524,7 +523,7 @@
     "\\tag*{(24)}\\\\\n",
     "\\end{align}\n",
     "\n",
-    "The same result is obtained .\n",
+    "The same result is obtained if eq. (13) is used instead.\n",
     "By taking the ratio between these quantities we find\n",
     "\n",
     "\\begin{align}\n",
@@ -854,7 +853,7 @@
     "\\tag*{(57)}\n",
     "\\end{align}\n",
     "\n",
-    "We can now use the general form for the mass-ratio in the claim $\\lambda=100^{d-1}$, from where we find that the total naumber of clacks is\n",
+    "We can now use the general form for the mass-ratio in the claim $\\lambda=100^{d-1}$, from where we find that the total number of clacks is\n",
     "\n",
     "\\begin{align}\n",
     "N_\\text{clacks}(\\lambda\\gg1) = \\text{int}\\left(\\pi 10^{d-1}\\right),\n",
@@ -919,7 +918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
