more typos fixed

--- a/Pi-from-Colliding-Blocks.ipynb
+++ b/Pi-from-Colliding-Blocks.ipynb
@@ -524,19 +524,14 @@
     "\\end{align}\n",
     "\n",
     "The same result is obtained if eq. (13) is used instead.\n",
-    "By taking the ratio between these quantities we find\n",
+    "By taking the ratio between these last two expressions we find\n",
     "\n",
     "\\begin{align}\n",
     "k_{\\{v_k=0\\}} = \\pi \\, \\arctan\\left(\\dfrac{2\\sqrt{\\lambda}}{\\lambda-1}\\right)^{-1}. \n",
     "\\tag*{(25)}\\\\\n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This result shows $k_{\\{v_k=0\\}}$ as a continuos quantity. Its relation to the discrete value of the total number of collisions $N_\\text{collisions} = k_\\text{last}$ arises as a direct consequence of the conditions for the end of the process discussed in Sec. 1.2 and it is explored further in the next section."
+    "\\end{align}\n",
+    "\n",
+    "This result shows $k_{\\{v_k=0\\}}$ as a continuos quantity. Its relation to the discrete value of the total number of collisions $N_\\text{collisions} = k_\\text{last}$ arises as a direct consequence of the conditions for the end of the process discussed in Sec. 2.3 and it is explored further in the next section."
    ]
   },
   {
@@ -545,8 +540,8 @@
    "source": [
     "### 4.2 The end of the process and the final-state conditions\n",
     "\n",
-    "In Sec. 2.3 was shown that there are two possibilities for the final state of the system, denoted conditions *i* and *ii* in eq. (16).\n",
-    "Dividing by the velocity of the large block these conditions can be written as\n",
+    "In Sec. 2.3 we found that there are two possibilities for the final state of the system, denoted conditions *i* and *ii* in eq. (16).\n",
+    "Dividing by the final velocity of the large block $V_{k_\\text{last}}<0$ these conditions can be written as\n",
     "\n",
     "\\begin{align}\n",
     "\\text{(cond. $i$)}  && 0 &\\le \\dfrac{v_{k_\\text{last}}}{V_{k_\\text{last}}} < 1, \\\\\n",
@@ -555,7 +550,7 @@
     "\\end{align}\n",
     "\n",
     "This result shows that these process-termination conditions are equivalent to determining the sign of the ratio $v_{k_\\text{last}}/V_{k_\\text{last}}$.\n",
-    "From the analysis in Sec. 2.3 we know that when the process ends $V_{k_\\text{last}}<0$; therefore, the conditions (26) can be written as\n",
+    "From the analysis in Sec. 2.3 we know that when the process ends $V_{k_\\text{last}}<0$; therefore, the conditions (26) can also be written as\n",
     "\n",
     "\\begin{align}\n",
     "\\text{(cond. $i$)}  && v_{k_\\text{last}} \\le 0, \\\\\n",
@@ -583,7 +578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now notice a key feature of these two quantities: $k_\\text{last}$ if a integer, whereas $k_{\\{v_k=0\\}}$ is a real number. \n",
+    "We now notice a key feature of these two quantities: $k_\\text{last}$ is a integer, whereas $k_{\\{v_k=0\\}}$ is a real number. \n",
     "We can find one in terms of the other by rounding the value of $k_{\\{v_k=0\\}}$ to its nearest integer so we can write\n",
     "\n",
     "\\begin{align}\n",
